# luanerizer

./: .envrc  .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.py  cloudbuild.yaml  luanerizer.py  manifest.yml  nltk.txt  pip-selfcheck.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: pylint.yml
config/: broker.yaml  kapp.yaml  ksvc.yaml  kustomization.yaml  trigger.yaml  values.yaml
custom-builder/: Dockerfile
overlays/: ksvc-canary.yaml
