[tool.poetry]
name = "luanerizer"
version = "0.1.0"
description = "putting the :luan: in :luan: since olden :luan:"
authors = ["Connor Braa <cbraa@pivotal.io>"]
license = "Connor Braa <cbraa@vmware.com>"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
Flask = "^1.1.2"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.2"
MarkupSafe = "^2.0.1"
nltk = "^3.5"
requests = "^2.25.0"
Werkzeug = "^1.0.1"
yarg = "^0.1.9"
cloudevents = "^1.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
pylint = "^2.6.0"
python-language-server = "^0.36.1"
black = "^20.8b1"
rope = "^0.18.0"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
